Fixed start turn having no duration + removed most of the Warnings + solved MVP Protocol violations